<resources>
    <string name="app_name">Project</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_tip">没有账号，去注册</string>
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_confirm">请再次输入密码</string>
    <string name="im_student">我是学生</string>
    <string name="im_enterprise">我是企业</string>
</resources>